HW 01 calculate PLA model accuracy

--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "[0.9977553310886644, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def pla(data):\n",
@@ -527,7 +531,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def naive_pla(datas):\n",
@@ -570,7 +578,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def pocket_pla(datas, limit):\n",
@@ -612,6 +624,87 @@
    "source": [
     "pocket_pla()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 預測"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pla_predict(data):\n",
+    "    predict = []\n",
+    "    for ix in range(len(data.index)):\n",
+    "        inputVector = data.iloc[ix]\n",
+    "        global weights\n",
+    "        dotproduct = np.dot(inputVector, weights)  # take the dot product of input and weight\n",
+    "        estimatedLabel = np.sign(dotproduct)\n",
+    "        if estimatedLabel == -1:\n",
+    "            estimatedLabel = 0\n",
+    "        else:\n",
+    "            estimatedLabel = 1\n",
+    "        predict.append(estimatedLabel) \n",
+    "        \n",
+    "    return predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('test.csv')\n",
+    "\n",
+    "test_feature = test.drop(['Name', 'Sex', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
+    "\n",
+    "test_feature = test_feature.drop(['Embarked'], axis=1)\n",
+    "\n",
+    "y_pred = pla_predict(test_feature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 計算模型準確度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37799043062200954"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "answer = pd.read_csv('submission.csv')\n",
+    "\n",
+    "accuracy_score(answer['Survived'], y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
