HW 01 add data pre-processing

--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -244,21 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pclass      0\n",
-       "Age       177\n",
-       "SibSp       0\n",
-       "Parch       0\n",
-       "Fare        0\n",
+       "Pclass        0\n",
+       "Age         177\n",
+       "SibSp         0\n",
+       "Parch         0\n",
+       "Fare          0\n",
+       "Embarked      2\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,16 +272,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "將年紀的空值用平均值補"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_age = train_feature['Age'].dropna().median()\n",
+    "# 取出Age是Nan的row後，將該row的Age以平均數取代之\n",
+    "train_feature.loc[ (train_feature['Age'].isnull()), 'Age'] = median_age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用眾數補embarked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature['Embarked'] = train_feature['Embarked'].fillna(train_feature['Embarked'].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 03. One Hot Encoding\n",
     "將Embarked mapping成數值"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_feature['Embarked'] = train_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)"
+   ]
   },
   {
    "cell_type": "code",
@@ -288,7 +325,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_feature = train_feature.drop(['Embarked'], axis=1)"
+    "# train_feature = train_feature.drop(['Embarked'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 05. 演算法"
    ]
   },
   {
@@ -307,14 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0.]\n"
+      "[0. 0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
@@ -360,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -415,10 +459,19 @@
     {
      "data": {
       "text/plain": [
-       "[0.9977553310886644, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]"
+       "[0.6172839506172839,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161,\n",
+       " 0.6161616161616161]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,11 +496,12 @@
     {
      "data": {
       "text/plain": [
-       "Pclass      66.66000\n",
-       "Age              NaN\n",
-       "SibSp       16.19000\n",
-       "Parch       15.90000\n",
-       "Fare      1654.51269\n",
+       "Pclass      0.010000\n",
+       "Age         0.380000\n",
+       "SibSp       0.010000\n",
+       "Parch       0.000000\n",
+       "Fare        0.712833\n",
+       "Embarked    0.000000\n",
        "dtype: float64"
       ]
      },
@@ -634,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,15 +710,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('test.csv')\n",
     "\n",
     "test_feature = test.drop(['Name', 'Sex', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
-    "\n",
-    "test_feature = test_feature.drop(['Embarked'], axis=1)\n",
+    "median_age = test_feature['Age'].dropna().median()\n",
+    "test_feature.loc[ (test_feature['Age'].isnull()), 'Age'] = median_age\n",
+    "test_feature['Embarked'] = test_feature['Embarked'].fillna(test_feature['Embarked'].mode()[0])\n",
+    "test_feature['Embarked'] = test_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)\n",
+    "# test_feature = test_feature.drop(['Embarked'], axis=1)\n",
     "\n",
     "y_pred = pla_predict(test_feature)"
    ]
@@ -678,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +744,7 @@
        "0.37799043062200954"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
