HW 01 modify algorithm to increase accuracy

--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,20 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_feature['Embarked'] = train_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_feature = train_feature.drop(['Embarked'], axis=1)"
    ]
   },
   {
@@ -351,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +359,7 @@
     "\n",
     "# weights.fill(0)\n",
     "\n",
-    "learningRate = 0.01\n",
+    "learningRate = 0.05\n",
     "\n",
     "Iterations = 10\n",
     "# 紀錄error變化\n",
@@ -404,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,49 +420,128 @@
     "            actualLabel = labels[ix];\n",
     "            # 比較預測的label與答案\n",
     "            if actualLabel != estimatedLabel:\n",
-    "                weights = weights + actualLabel*learningRate*inputVector\n",
+    "#                 weights = weights + actualLabel*learningRate*inputVector\n",
+    "                # actualLabel - estimatedLabel 計算 loss\n",
+    "                weights = weights + (actualLabel - estimatedLabel)*inputVector\n",
     "                err+=1\n",
-    "\n",
-    "        errors.append( (err*1.0) / len(data) )  "
+    "                \n",
+    "        global errors\n",
+    "        errors.append( (err*1.0) / len(data) )  \n",
+    "        print(weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "iteration 0\n",
+      "Pclass      -10.0000\n",
+      "Age         -35.5000\n",
+      "SibSp       -98.0000\n",
+      "Parch       -21.0000\n",
+      "Fare        107.5869\n",
+      "Embarked    -17.0000\n",
+      "dtype: float64\n",
       "iteration 1\n",
+      "Pclass      -30.0000\n",
+      "Age         -41.5000\n",
+      "SibSp      -132.0000\n",
+      "Parch       -10.0000\n",
+      "Fare         95.2662\n",
+      "Embarked    -64.0000\n",
+      "dtype: float64\n",
       "iteration 2\n",
+      "Pclass      -38.0000\n",
+      "Age          -5.5000\n",
+      "SibSp      -170.0000\n",
+      "Parch       -33.0000\n",
+      "Fare         -8.6631\n",
+      "Embarked    -91.0000\n",
+      "dtype: float64\n",
       "iteration 3\n",
+      "Pclass      -42.0000\n",
+      "Age         -25.5000\n",
+      "SibSp      -244.0000\n",
+      "Parch       -78.0000\n",
+      "Fare         81.5914\n",
+      "Embarked   -108.0000\n",
+      "dtype: float64\n",
       "iteration 4\n",
+      "Pclass       -4.0000\n",
+      "Age         -11.5000\n",
+      "SibSp      -310.0000\n",
+      "Parch      -111.0000\n",
+      "Fare         15.6035\n",
+      "Embarked   -129.0000\n",
+      "dtype: float64\n",
       "iteration 5\n",
+      "Pclass       26.000\n",
+      "Age         -41.500\n",
+      "SibSp      -270.000\n",
+      "Parch       -88.000\n",
+      "Fare         95.016\n",
+      "Embarked   -130.000\n",
+      "dtype: float64\n",
       "iteration 6\n",
+      "Pclass       42.0000\n",
+      "Age         -28.0000\n",
+      "SibSp      -278.0000\n",
+      "Parch       -57.0000\n",
+      "Fare         68.9703\n",
+      "Embarked   -125.0000\n",
+      "dtype: float64\n",
       "iteration 7\n",
+      "Pclass       34.0000\n",
+      "Age         -32.8400\n",
+      "SibSp      -308.0000\n",
+      "Parch       -82.0000\n",
+      "Fare         60.1242\n",
+      "Embarked   -116.0000\n",
+      "dtype: float64\n",
       "iteration 8\n",
-      "iteration 9\n"
+      "Pclass       28.0000\n",
+      "Age         -33.8400\n",
+      "SibSp      -342.0000\n",
+      "Parch       -83.0000\n",
+      "Fare         90.2949\n",
+      "Embarked   -125.0000\n",
+      "dtype: float64\n",
+      "iteration 9\n",
+      "Pclass       52.0000\n",
+      "Age         -38.3400\n",
+      "SibSp      -308.0000\n",
+      "Parch       -52.0000\n",
+      "Fare         45.0988\n",
+      "Embarked   -122.0000\n",
+      "dtype: float64\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.6172839506172839,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161,\n",
-       " 0.6161616161616161]"
+       "[0.6992143658810326,\n",
+       " 0.696969696969697,\n",
+       " 0.7048260381593715,\n",
+       " 0.7104377104377104,\n",
+       " 0.7059483726150393,\n",
+       " 0.7093153759820426,\n",
+       " 0.7014590347923682,\n",
+       " 0.7104377104377104,\n",
+       " 0.712682379349046,\n",
+       " 0.7115600448933782]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +791,6 @@
     "test_feature.loc[ (test_feature['Age'].isnull()), 'Age'] = median_age\n",
     "test_feature['Embarked'] = test_feature['Embarked'].fillna(test_feature['Embarked'].mode()[0])\n",
     "test_feature['Embarked'] = test_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)\n",
-    "# test_feature = test_feature.drop(['Embarked'], axis=1)\n",
     "\n",
     "y_pred = pla_predict(test_feature)"
    ]
@@ -735,16 +804,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.37799043062200954"
+       "0.6842105263157895"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
