PCA code update

--- a/cs531 資料科學/PCA.ipynb
+++ b/cs531 資料科學/PCA.ipynb
@@ -348,6 +348,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "推導eigenvalue\n",
+    "> https://stackoverflow.com/questions/31909945/obtain-eigen-values-and-vectors-from-sklearn-pca"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
