Add to_csv for kaggle score

--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -180,7 +180,12 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,7 +250,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -277,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +371,7 @@
     "\n",
     "learningRate = 0.05\n",
     "\n",
-    "Iterations = 10\n",
+    "Iterations = 20\n",
     "# 紀錄error變化\n",
     "errors = []"
    ]
@@ -395,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,12 +437,12 @@
     "                \n",
     "        global errors\n",
     "        errors.append( (err*1.0) / len(data) )  \n",
-    "        print(weights)"
+    "#         print(weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -445,85 +455,25 @@
      "output_type": "stream",
      "text": [
       "iteration 0\n",
-      "Pclass      -10.0000\n",
-      "Age         -35.5000\n",
-      "SibSp       -98.0000\n",
-      "Parch       -21.0000\n",
-      "Fare        107.5869\n",
-      "Embarked    -17.0000\n",
-      "dtype: float64\n",
       "iteration 1\n",
-      "Pclass      -30.0000\n",
-      "Age         -41.5000\n",
-      "SibSp      -132.0000\n",
-      "Parch       -10.0000\n",
-      "Fare         95.2662\n",
-      "Embarked    -64.0000\n",
-      "dtype: float64\n",
       "iteration 2\n",
-      "Pclass      -38.0000\n",
-      "Age          -5.5000\n",
-      "SibSp      -170.0000\n",
-      "Parch       -33.0000\n",
-      "Fare         -8.6631\n",
-      "Embarked    -91.0000\n",
-      "dtype: float64\n",
       "iteration 3\n",
-      "Pclass      -42.0000\n",
-      "Age         -25.5000\n",
-      "SibSp      -244.0000\n",
-      "Parch       -78.0000\n",
-      "Fare         81.5914\n",
-      "Embarked   -108.0000\n",
-      "dtype: float64\n",
       "iteration 4\n",
-      "Pclass       -4.0000\n",
-      "Age         -11.5000\n",
-      "SibSp      -310.0000\n",
-      "Parch      -111.0000\n",
-      "Fare         15.6035\n",
-      "Embarked   -129.0000\n",
-      "dtype: float64\n",
       "iteration 5\n",
-      "Pclass       26.000\n",
-      "Age         -41.500\n",
-      "SibSp      -270.000\n",
-      "Parch       -88.000\n",
-      "Fare         95.016\n",
-      "Embarked   -130.000\n",
-      "dtype: float64\n",
       "iteration 6\n",
-      "Pclass       42.0000\n",
-      "Age         -28.0000\n",
-      "SibSp      -278.0000\n",
-      "Parch       -57.0000\n",
-      "Fare         68.9703\n",
-      "Embarked   -125.0000\n",
-      "dtype: float64\n",
       "iteration 7\n",
-      "Pclass       34.0000\n",
-      "Age         -32.8400\n",
-      "SibSp      -308.0000\n",
-      "Parch       -82.0000\n",
-      "Fare         60.1242\n",
-      "Embarked   -116.0000\n",
-      "dtype: float64\n",
       "iteration 8\n",
-      "Pclass       28.0000\n",
-      "Age         -33.8400\n",
-      "SibSp      -342.0000\n",
-      "Parch       -83.0000\n",
-      "Fare         90.2949\n",
-      "Embarked   -125.0000\n",
-      "dtype: float64\n",
       "iteration 9\n",
-      "Pclass       52.0000\n",
-      "Age         -38.3400\n",
-      "SibSp      -308.0000\n",
-      "Parch       -52.0000\n",
-      "Fare         45.0988\n",
-      "Embarked   -122.0000\n",
-      "dtype: float64\n"
+      "iteration 10\n",
+      "iteration 11\n",
+      "iteration 12\n",
+      "iteration 13\n",
+      "iteration 14\n",
+      "iteration 15\n",
+      "iteration 16\n",
+      "iteration 17\n",
+      "iteration 18\n",
+      "iteration 19\n"
      ]
     },
     {
@@ -538,10 +488,20 @@
        " 0.7014590347923682,\n",
        " 0.7104377104377104,\n",
        " 0.712682379349046,\n",
-       " 0.7115600448933782]"
+       " 0.7115600448933782,\n",
+       " 0.7059483726150393,\n",
+       " 0.6980920314253648,\n",
+       " 0.7093153759820426,\n",
+       " 0.712682379349046,\n",
+       " 0.7025813692480359,\n",
+       " 0.7093153759820426,\n",
+       " 0.7104377104377104,\n",
+       " 0.7059483726150393,\n",
+       " 0.7003367003367004,\n",
+       " 0.7093153759820426]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,22 +520,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pclass      0.010000\n",
-       "Age         0.380000\n",
-       "SibSp       0.010000\n",
-       "Parch       0.000000\n",
-       "Fare        0.712833\n",
-       "Embarked    0.000000\n",
+       "Pclass       48.000\n",
+       "Age         -31.900\n",
+       "SibSp      -360.000\n",
+       "Parch      -114.000\n",
+       "Fare         87.362\n",
+       "Embarked   -146.000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,16 +769,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6842105263157895"
+       "0.6435406698564593"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,6 +788,105 @@
     "answer = pd.read_csv('submission.csv')\n",
     "\n",
     "accuracy_score(answer['Survived'], y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 輸出成csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>896</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived\n",
+       "0          892         0\n",
+       "1          893         0\n",
+       "2          894         0\n",
+       "3          895         0\n",
+       "4          896         0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF_PLA = pd.DataFrame(\n",
+    "    {'PassengerId': answer['PassengerId'],\n",
+    "     'Survived': y_pred\n",
+    "    })\n",
+    "\n",
+    "DF_PLA.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DF_PLA.to_csv('submit_PLA.csv', index=False)"
    ]
   },
   {
