--- a/cs531 資料科學/NLP Classify.ipynb
+++ b/cs531 資料科學/NLP Classify.ipynb
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2791,7 +2791,7 @@
        "       [   0,    0,    0, ...,  507,  698,  912]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2822,6 +2822,20 @@
    "source": [
     "sequence_padded.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "切割測試集與訓練集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3520,9 +3534,9 @@
     "# model_bi.add(Bidirectional(GRU(32, return_sequences=True)))\n",
     "model_bi.add(Bidirectional(GRU(32)))\n",
     "\n",
-    "model_bi.add(Dense(units=50, activation='relu' ))\n",
+    "model_bi.add(Dense(units=50, activation='relu'))\n",
     "model_bi.add(Dropout(0.4))\n",
-    "model_bi.add(Dense(units=4, activation='softmax' ))\n",
+    "model_bi.add(Dense(units=4, activation='softmax'))\n",
     "\n",
     "model_bi.summary()"
    ]
@@ -3614,13 +3628,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1D CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_4 (Embedding)      (None, 15, 64)            257280    \n",
+      "_________________________________________________________________\n",
+      "conv1d_7 (Conv1D)            (None, 11, 64)            20544     \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d_4 (MaxPooling1 (None, 5, 64)             0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_8 (Conv1D)            (None, 1, 64)             20544     \n",
+      "_________________________________________________________________\n",
+      "global_max_pooling1d_1 (Glob (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 4)                 260       \n",
+      "=================================================================\n",
+      "Total params: 298,628\n",
+      "Trainable params: 298,628\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Dropout, Activation, Flatten\n",
+    "from keras.layers import Conv1D, GlobalMaxPooling1D, MaxPooling1D\n",
+    "from keras.layers.embeddings import Embedding\n",
+    "\n",
+    "model_CNN = Sequential()\n",
+    "\n",
+    "model_CNN.add(Embedding(output_dim=64, input_dim=len(tokenizer.word_index), input_length=15))\n",
+    "\n",
+    "model_CNN.add(Conv1D(64, 5, activation='relu'))\n",
+    "model_CNN.add(MaxPooling1D())\n",
+    "model_CNN.add(Conv1D(64, 5, activation='relu'))\n",
+    "model_CNN.add(GlobalMaxPooling1D())\n",
+    "model_CNN.add(Dense(4, activation='softmax'))\n",
+    "model_CNN.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 1160 samples, validate on 291 samples\n",
+      "Epoch 1/10\n",
+      " - 0s - loss: 0.0061 - acc: 0.9983 - val_loss: 0.9008 - val_acc: 0.7964\n",
+      "Epoch 2/10\n",
+      " - 0s - loss: 0.0039 - acc: 0.9983 - val_loss: 1.0741 - val_acc: 0.7826\n",
+      "Epoch 3/10\n",
+      " - 0s - loss: 0.0043 - acc: 0.9978 - val_loss: 1.0553 - val_acc: 0.7732\n",
+      "Epoch 4/10\n",
+      " - 0s - loss: 0.0049 - acc: 0.9987 - val_loss: 0.9864 - val_acc: 0.8076\n",
+      "Epoch 5/10\n",
+      " - 0s - loss: 0.0035 - acc: 0.9991 - val_loss: 1.1084 - val_acc: 0.7998\n",
+      "Epoch 6/10\n",
+      " - 0s - loss: 0.0024 - acc: 0.9989 - val_loss: 1.1036 - val_acc: 0.7947\n",
+      "Epoch 7/10\n",
+      " - 0s - loss: 0.0022 - acc: 0.9987 - val_loss: 1.1100 - val_acc: 0.7921\n",
+      "Epoch 8/10\n",
+      " - 0s - loss: 0.0018 - acc: 0.9987 - val_loss: 1.0506 - val_acc: 0.7964\n",
+      "Epoch 9/10\n",
+      " - 0s - loss: 0.0025 - acc: 0.9991 - val_loss: 1.0485 - val_acc: 0.7955\n",
+      "Epoch 10/10\n",
+      " - 0s - loss: 0.0023 - acc: 0.9983 - val_loss: 1.0511 - val_acc: 0.8007\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_CNN.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model_history_CNN = model_CNN.fit(sequence_padded, label_ohe, batch_size=30, epochs=10, verbose=2, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Attention"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3629,24 +3756,26 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_1 (InputLayer)            (None, None)         0                                            \n",
+      "input_2 (InputLayer)            (None, None)         0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_7 (Embedding)         (None, None, 128)    514560      input_1[0][0]                    \n",
+      "embedding_8 (Embedding)         (None, None, 128)    514560      input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "position__embedding_1 (Position (None, None, 128)    0           embedding_7[0][0]                \n",
+      "position__embedding_2 (Position (None, None, 128)    0           embedding_8[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "attention_1 (Attention)         (None, None, 128)    49152       position__embedding_1[0][0]      \n",
-      "                                                                 position__embedding_1[0][0]      \n",
-      "                                                                 position__embedding_1[0][0]      \n",
+      "attention_2 (Attention)         (None, None, 128)    49152       position__embedding_2[0][0]      \n",
+      "                                                                 position__embedding_2[0][0]      \n",
+      "                                                                 position__embedding_2[0][0]      \n",
       "__________________________________________________________________________________________________\n",
-      "global_average_pooling1d_1 (Glo (None, 128)          0           attention_1[0][0]                \n",
+      "global_average_pooling1d_2 (Glo (None, 128)          0           attention_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_9 (Dropout)             (None, 128)          0           global_average_pooling1d_1[0][0] \n",
+      "dropout_10 (Dropout)            (None, 128)          0           global_average_pooling1d_2[0][0] \n",
       "__________________________________________________________________________________________________\n",
-      "dense_11 (Dense)                (None, 4)            516         dropout_9[0][0]                  \n",
+      "dense_12 (Dense)                (None, 50)           6450        dropout_10[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_13 (Dense)                (None, 4)            204         dense_12[0][0]                   \n",
       "==================================================================================================\n",
-      "Total params: 564,228\n",
-      "Trainable params: 564,228\n",
+      "Total params: 570,366\n",
+      "Trainable params: 570,366\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -3663,6 +3792,7 @@
     "O_seq = Attention(8, 16)([embeddings, embeddings, embeddings])\n",
     "O_seq = GlobalAveragePooling1D()(O_seq)\n",
     "O_seq = Dropout(0.5)(O_seq)\n",
+    "O_seq = Dense(units=50, activation='relu')(O_seq)\n",
     "outputs = Dense(4, activation='softmax')(O_seq)\n",
     "\n",
     "model = Model(inputs=S_inputs, outputs=outputs)\n",
@@ -3671,8 +3801,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3680,73 +3815,72 @@
      "text": [
       "Train on 1160 samples, validate on 291 samples\n",
       "Epoch 1/30\n",
-      " - 1s - loss: 0.0030 - acc: 0.9991 - val_loss: 1.9355 - val_acc: 0.7560\n",
+      " - 1s - loss: 0.5459 - acc: 0.7377 - val_loss: 0.5533 - val_acc: 0.7500\n",
       "Epoch 2/30\n",
-      " - 0s - loss: 0.0067 - acc: 0.9987 - val_loss: 1.6675 - val_acc: 0.7809\n",
+      " - 0s - loss: 0.5126 - acc: 0.7463 - val_loss: 0.5574 - val_acc: 0.7612\n",
       "Epoch 3/30\n",
-      " - 0s - loss: 0.0062 - acc: 0.9983 - val_loss: 1.7517 - val_acc: 0.7809\n",
+      " - 0s - loss: 0.5033 - acc: 0.7578 - val_loss: 0.5296 - val_acc: 0.7500\n",
       "Epoch 4/30\n",
-      " - 0s - loss: 0.0045 - acc: 0.9983 - val_loss: 1.8373 - val_acc: 0.7792\n",
+      " - 0s - loss: 0.4596 - acc: 0.7875 - val_loss: 0.4674 - val_acc: 0.7921\n",
       "Epoch 5/30\n",
-      " - 0s - loss: 0.0044 - acc: 0.9983 - val_loss: 1.9052 - val_acc: 0.7792\n",
+      " - 0s - loss: 0.3002 - acc: 0.8853 - val_loss: 0.4523 - val_acc: 0.8015\n",
       "Epoch 6/30\n",
-      " - 0s - loss: 0.0029 - acc: 0.9991 - val_loss: 1.8191 - val_acc: 0.7766\n",
+      " - 0s - loss: 0.1737 - acc: 0.9394 - val_loss: 0.6676 - val_acc: 0.7844\n",
       "Epoch 7/30\n",
-      " - 0s - loss: 0.0068 - acc: 0.9987 - val_loss: 1.6422 - val_acc: 0.7741\n",
+      " - 0s - loss: 0.1129 - acc: 0.9591 - val_loss: 0.5054 - val_acc: 0.8101\n",
       "Epoch 8/30\n",
-      " - 0s - loss: 0.0062 - acc: 0.9987 - val_loss: 1.7511 - val_acc: 0.7766\n",
+      " - 0s - loss: 0.0573 - acc: 0.9815 - val_loss: 0.6489 - val_acc: 0.8076\n",
       "Epoch 9/30\n",
-      " - 0s - loss: 0.0066 - acc: 0.9987 - val_loss: 1.7742 - val_acc: 0.7723\n",
+      " - 0s - loss: 0.0321 - acc: 0.9931 - val_loss: 0.7051 - val_acc: 0.7861\n",
       "Epoch 10/30\n",
-      " - 0s - loss: 0.0081 - acc: 0.9961 - val_loss: 1.8862 - val_acc: 0.7921\n",
+      " - 0s - loss: 0.0199 - acc: 0.9935 - val_loss: 0.7147 - val_acc: 0.7749\n",
       "Epoch 11/30\n",
-      " - 0s - loss: 0.0047 - acc: 0.9974 - val_loss: 1.4803 - val_acc: 0.7766\n",
+      " - 0s - loss: 0.0129 - acc: 0.9972 - val_loss: 0.8425 - val_acc: 0.7878\n",
       "Epoch 12/30\n",
-      " - 0s - loss: 0.0077 - acc: 0.9966 - val_loss: 1.8619 - val_acc: 0.7869\n",
+      " - 0s - loss: 0.0083 - acc: 0.9981 - val_loss: 0.9317 - val_acc: 0.7844\n",
       "Epoch 13/30\n",
-      " - 0s - loss: 0.0070 - acc: 0.9983 - val_loss: 1.5669 - val_acc: 0.7672\n",
+      " - 0s - loss: 0.0117 - acc: 0.9970 - val_loss: 0.8534 - val_acc: 0.7775\n",
       "Epoch 14/30\n",
-      " - 0s - loss: 0.0016 - acc: 0.9996 - val_loss: 1.8054 - val_acc: 0.7801\n",
+      " - 0s - loss: 0.0110 - acc: 0.9970 - val_loss: 0.8831 - val_acc: 0.7904\n",
       "Epoch 15/30\n",
-      " - 0s - loss: 0.0034 - acc: 0.9987 - val_loss: 1.7825 - val_acc: 0.7792\n",
+      " - 0s - loss: 0.0041 - acc: 0.9991 - val_loss: 0.9051 - val_acc: 0.7981\n",
       "Epoch 16/30\n",
-      " - 0s - loss: 0.0017 - acc: 0.9991 - val_loss: 1.6839 - val_acc: 0.7732\n",
+      " - 0s - loss: 0.0085 - acc: 0.9970 - val_loss: 0.9156 - val_acc: 0.7878\n",
       "Epoch 17/30\n",
-      " - 0s - loss: 0.0018 - acc: 0.9991 - val_loss: 1.9071 - val_acc: 0.7844\n",
+      " - 0s - loss: 0.0088 - acc: 0.9970 - val_loss: 0.9812 - val_acc: 0.7543\n",
       "Epoch 18/30\n",
-      " - 0s - loss: 0.0037 - acc: 0.9991 - val_loss: 1.6750 - val_acc: 0.7698\n",
+      " - 0s - loss: 0.0057 - acc: 0.9991 - val_loss: 1.2526 - val_acc: 0.7869\n",
       "Epoch 19/30\n",
-      " - 0s - loss: 0.0035 - acc: 0.9987 - val_loss: 1.7239 - val_acc: 0.7784\n",
+      " - 0s - loss: 0.0059 - acc: 0.9987 - val_loss: 1.0199 - val_acc: 0.7766\n",
       "Epoch 20/30\n",
-      " - 0s - loss: 0.0017 - acc: 0.9991 - val_loss: 1.6711 - val_acc: 0.7758\n",
+      " - 0s - loss: 0.0054 - acc: 0.9983 - val_loss: 0.9880 - val_acc: 0.7620\n",
       "Epoch 21/30\n",
-      " - 0s - loss: 4.0560e-04 - acc: 1.0000 - val_loss: 1.7177 - val_acc: 0.7801\n",
+      " - 0s - loss: 0.0059 - acc: 0.9987 - val_loss: 1.1742 - val_acc: 0.7826\n",
       "Epoch 22/30\n",
-      " - 0s - loss: 0.0012 - acc: 0.9996 - val_loss: 1.7463 - val_acc: 0.7809\n",
+      " - 0s - loss: 0.0057 - acc: 0.9983 - val_loss: 1.2030 - val_acc: 0.7844\n",
       "Epoch 23/30\n",
-      " - 0s - loss: 0.0010 - acc: 0.9994 - val_loss: 1.7832 - val_acc: 0.7801\n",
+      " - 0s - loss: 0.0064 - acc: 0.9974 - val_loss: 0.9890 - val_acc: 0.7637\n",
       "Epoch 24/30\n",
-      " - 0s - loss: 0.0044 - acc: 0.9987 - val_loss: 1.6495 - val_acc: 0.7818\n",
+      " - 0s - loss: 0.0058 - acc: 0.9983 - val_loss: 1.0806 - val_acc: 0.7784\n",
       "Epoch 25/30\n",
-      " - 0s - loss: 0.0033 - acc: 0.9987 - val_loss: 1.7743 - val_acc: 0.7758\n",
+      " - 0s - loss: 0.0034 - acc: 0.9991 - val_loss: 1.0713 - val_acc: 0.7775\n",
       "Epoch 26/30\n",
-      " - 0s - loss: 0.0021 - acc: 0.9991 - val_loss: 1.7351 - val_acc: 0.7741\n",
+      " - 0s - loss: 0.0038 - acc: 0.9989 - val_loss: 1.1142 - val_acc: 0.7852\n",
       "Epoch 27/30\n",
-      " - 0s - loss: 0.0044 - acc: 0.9987 - val_loss: 1.7224 - val_acc: 0.7835\n",
+      " - 0s - loss: 0.0025 - acc: 0.9987 - val_loss: 1.1787 - val_acc: 0.7801\n",
       "Epoch 28/30\n",
-      " - 0s - loss: 0.0060 - acc: 0.9978 - val_loss: 1.7040 - val_acc: 0.7835\n",
+      " - 0s - loss: 0.0030 - acc: 0.9987 - val_loss: 1.0662 - val_acc: 0.7637\n",
       "Epoch 29/30\n",
-      " - 0s - loss: 0.0028 - acc: 0.9991 - val_loss: 1.4286 - val_acc: 0.7826\n",
+      " - 0s - loss: 0.0041 - acc: 0.9987 - val_loss: 1.0921 - val_acc: 0.7809\n",
       "Epoch 30/30\n",
-      " - 0s - loss: 0.0060 - acc: 0.9983 - val_loss: 1.5800 - val_acc: 0.7912\n"
+      " - 0s - loss: 0.0029 - acc: 0.9987 - val_loss: 1.1449 - val_acc: 0.7835\n"
      ]
     }
    ],
    "source": [
     "# try using different optimizers and different optimizer configs\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "\n",
-    "model_history_attention = model.fit(sequence_padded, label_ohe, batch_size=30, epochs=30, verbose=2, validation_split=0.2)"
+    "model_history_attention = model.fit(sequence_padded, label_ohe, batch_size=30, epochs=15, verbose=2, validation_split=0.2)"
    ]
   },
   {
@@ -3810,6 +3944,20 @@
    "source": [
     "show_train_history(model_history_attention, 'acc', 'val_acc')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
