--- a/cs531 資料科學/NLP Classify.ipynb
+++ b/cs531 資料科學/NLP Classify.ipynb
@@ -3722,6 +3722,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### CNN-LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Wade\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_6 (Embedding)      (None, 15, 64)            257280    \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 15, 64)            0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_10 (Conv1D)           (None, 11, 64)            20544     \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d_6 (MaxPooling1 (None, 5, 64)             0         \n",
+      "_________________________________________________________________\n",
+      "cu_dnnlstm_2 (CuDNNLSTM)     (None, 32)                12544     \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 4)                 132       \n",
+      "=================================================================\n",
+      "Total params: 290,500\n",
+      "Trainable params: 290,500\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Dropout, Activation, Flatten\n",
+    "from keras.layers import Conv1D, MaxPooling1D, CuDNNLSTM\n",
+    "from keras.layers.embeddings import Embedding\n",
+    "\n",
+    "model_CNN_LSTM = Sequential()\n",
+    "\n",
+    "model_CNN_LSTM.add(Embedding(output_dim=64, input_dim=len(tokenizer.word_index), input_length=15))\n",
+    "model_CNN_LSTM.add(Dropout(0.4))\n",
+    "\n",
+    "model_CNN_LSTM.add(Conv1D(64, 5, activation='relu'))\n",
+    "model_CNN_LSTM.add(MaxPooling1D())\n",
+    "\n",
+    "model_CNN_LSTM.add(CuDNNLSTM(32))\n",
+    "\n",
+    "model_CNN_LSTM.add(Dense(4, activation='softmax'))\n",
+    "model_CNN_LSTM.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 1160 samples, validate on 291 samples\n",
+      "Epoch 1/10\n",
+      " - 1s - loss: 0.5243 - acc: 0.7504 - val_loss: 0.5490 - val_acc: 0.7500\n",
+      "Epoch 2/10\n",
+      " - 0s - loss: 0.4672 - acc: 0.8062 - val_loss: 0.4966 - val_acc: 0.7887\n",
+      "Epoch 3/10\n",
+      " - 0s - loss: 0.3120 - acc: 0.8692 - val_loss: 0.5089 - val_acc: 0.7955\n",
+      "Epoch 4/10\n",
+      " - 0s - loss: 0.1681 - acc: 0.9420 - val_loss: 0.5576 - val_acc: 0.8144\n",
+      "Epoch 5/10\n",
+      " - 0s - loss: 0.0989 - acc: 0.9651 - val_loss: 0.6302 - val_acc: 0.8058\n",
+      "Epoch 6/10\n",
+      " - 0s - loss: 0.0614 - acc: 0.9744 - val_loss: 0.6765 - val_acc: 0.8187\n",
+      "Epoch 7/10\n",
+      " - 0s - loss: 0.0331 - acc: 0.9922 - val_loss: 0.7421 - val_acc: 0.8084\n",
+      "Epoch 8/10\n",
+      " - 0s - loss: 0.0206 - acc: 0.9970 - val_loss: 0.7188 - val_acc: 0.8084\n",
+      "Epoch 9/10\n",
+      " - 0s - loss: 0.0124 - acc: 0.9978 - val_loss: 0.7174 - val_acc: 0.8041\n",
+      "Epoch 10/10\n",
+      " - 0s - loss: 0.0082 - acc: 0.9978 - val_loss: 0.7942 - val_acc: 0.8144\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_CNN_LSTM.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model_history_CNN_LSTM = model_CNN_LSTM.fit(sequence_padded, label_ohe, batch_size=30, epochs=10, verbose=2, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Attention"
    ]
   },
