--- a/cs531 資料科學/NLP Classify.ipynb
+++ b/cs531 資料科學/NLP Classify.ipynb
@@ -2832,10 +2832,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(sequence_padded, label_ohe, test_size=0.3, random_state=42)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2993,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -3014,7 +3018,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_3 (Embedding)      (None, 15, 64)            257280    \n",
+      "embedding_1 (Embedding)      (None, 15, 64)            257280    \n",
       "_________________________________________________________________\n",
       "dropout_1 (Dropout)          (None, 15, 64)            0         \n",
       "_________________________________________________________________\n",
@@ -3061,7 +3065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -3073,93 +3077,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 1160 samples, validate on 291 samples\n",
+      "WARNING:tensorflow:From C:\\Users\\Wade\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "Train on 812 samples, validate on 203 samples\n",
       "Epoch 1/40\n",
-      " - 0s - loss: 0.0057 - acc: 0.9983 - val_loss: 3.9477 - val_acc: 0.5979\n",
+      " - 3s - loss: 1.3299 - acc: 0.3633 - val_loss: 1.2000 - val_acc: 0.5172\n",
       "Epoch 2/40\n",
-      " - 0s - loss: 0.0046 - acc: 0.9966 - val_loss: 3.9535 - val_acc: 0.6082\n",
+      " - 0s - loss: 1.2478 - acc: 0.4249 - val_loss: 1.1462 - val_acc: 0.5320\n",
       "Epoch 3/40\n",
-      " - 0s - loss: 0.0048 - acc: 0.9974 - val_loss: 4.2482 - val_acc: 0.5808\n",
+      " - 0s - loss: 1.0688 - acc: 0.5714 - val_loss: 0.9992 - val_acc: 0.6059\n",
       "Epoch 4/40\n",
-      " - 0s - loss: 0.0052 - acc: 0.9957 - val_loss: 4.0474 - val_acc: 0.5911\n",
+      " - 0s - loss: 0.6531 - acc: 0.7611 - val_loss: 0.8767 - val_acc: 0.6404\n",
       "Epoch 5/40\n",
-      " - 0s - loss: 0.0066 - acc: 0.9974 - val_loss: 4.1775 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.3172 - acc: 0.9039 - val_loss: 0.8097 - val_acc: 0.6897\n",
       "Epoch 6/40\n",
-      " - 0s - loss: 0.0069 - acc: 0.9974 - val_loss: 4.3756 - val_acc: 0.5842\n",
+      " - 0s - loss: 0.1163 - acc: 0.9754 - val_loss: 0.8359 - val_acc: 0.7291\n",
       "Epoch 7/40\n",
-      " - 0s - loss: 0.0076 - acc: 0.9957 - val_loss: 4.1270 - val_acc: 0.5670\n",
+      " - 0s - loss: 0.0459 - acc: 0.9914 - val_loss: 0.9974 - val_acc: 0.6995\n",
       "Epoch 8/40\n",
-      " - 0s - loss: 0.0097 - acc: 0.9957 - val_loss: 4.0699 - val_acc: 0.5704\n",
+      " - 0s - loss: 0.0425 - acc: 0.9901 - val_loss: 1.0058 - val_acc: 0.7044\n",
       "Epoch 9/40\n",
-      " - 0s - loss: 0.0070 - acc: 0.9966 - val_loss: 3.7886 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0324 - acc: 0.9963 - val_loss: 0.9526 - val_acc: 0.7389\n",
       "Epoch 10/40\n",
-      " - 0s - loss: 0.0111 - acc: 0.9948 - val_loss: 3.8973 - val_acc: 0.5842\n",
+      " - 0s - loss: 0.0356 - acc: 0.9914 - val_loss: 0.9976 - val_acc: 0.7340\n",
       "Epoch 11/40\n",
-      " - 0s - loss: 0.0087 - acc: 0.9983 - val_loss: 4.0516 - val_acc: 0.5842\n",
+      " - 0s - loss: 0.0237 - acc: 0.9951 - val_loss: 1.1173 - val_acc: 0.7044\n",
       "Epoch 12/40\n",
-      " - 0s - loss: 0.0107 - acc: 0.9957 - val_loss: 3.6702 - val_acc: 0.5773\n",
+      " - 0s - loss: 0.0135 - acc: 0.9975 - val_loss: 1.1905 - val_acc: 0.7143\n",
       "Epoch 13/40\n",
-      " - 0s - loss: 0.0168 - acc: 0.9983 - val_loss: 4.0307 - val_acc: 0.5808\n",
+      " - 0s - loss: 0.0186 - acc: 0.9975 - val_loss: 1.2324 - val_acc: 0.6995\n",
       "Epoch 14/40\n",
-      " - 0s - loss: 0.0060 - acc: 0.9974 - val_loss: 3.9304 - val_acc: 0.5911\n",
+      " - 0s - loss: 0.0266 - acc: 0.9926 - val_loss: 1.2155 - val_acc: 0.7389\n",
       "Epoch 15/40\n",
-      " - 0s - loss: 0.0071 - acc: 0.9948 - val_loss: 3.9489 - val_acc: 0.6048\n",
+      " - 0s - loss: 0.0118 - acc: 0.9975 - val_loss: 1.1945 - val_acc: 0.7094\n",
       "Epoch 16/40\n",
-      " - 0s - loss: 0.0049 - acc: 0.9966 - val_loss: 3.7445 - val_acc: 0.6220\n",
+      " - 0s - loss: 0.0110 - acc: 0.9988 - val_loss: 1.2106 - val_acc: 0.7340\n",
       "Epoch 17/40\n",
-      " - 0s - loss: 0.0049 - acc: 0.9966 - val_loss: 3.7641 - val_acc: 0.6220\n",
+      " - 0s - loss: 0.0108 - acc: 0.9975 - val_loss: 1.2449 - val_acc: 0.7389\n",
       "Epoch 18/40\n",
-      " - 0s - loss: 0.0051 - acc: 0.9966 - val_loss: 3.8539 - val_acc: 0.6117\n",
+      " - 0s - loss: 0.0130 - acc: 0.9975 - val_loss: 1.3743 - val_acc: 0.6946\n",
       "Epoch 19/40\n",
-      " - 0s - loss: 0.0026 - acc: 0.9983 - val_loss: 3.9437 - val_acc: 0.6117\n",
+      " - 0s - loss: 0.0167 - acc: 0.9963 - val_loss: 1.3086 - val_acc: 0.7291\n",
       "Epoch 20/40\n",
-      " - 0s - loss: 0.0041 - acc: 0.9974 - val_loss: 3.9771 - val_acc: 0.6048\n",
+      " - 0s - loss: 0.0209 - acc: 0.9963 - val_loss: 1.2604 - val_acc: 0.7094\n",
       "Epoch 21/40\n",
-      " - 0s - loss: 0.0046 - acc: 0.9974 - val_loss: 4.0014 - val_acc: 0.6014\n",
+      " - 0s - loss: 0.0147 - acc: 0.9975 - val_loss: 1.2686 - val_acc: 0.7340\n",
       "Epoch 22/40\n",
-      " - 0s - loss: 0.0070 - acc: 0.9966 - val_loss: 4.0850 - val_acc: 0.5670\n",
+      " - 0s - loss: 0.0141 - acc: 0.9963 - val_loss: 1.3301 - val_acc: 0.7340\n",
       "Epoch 23/40\n",
-      " - 0s - loss: 0.0067 - acc: 0.9957 - val_loss: 4.1683 - val_acc: 0.5808\n",
+      " - 0s - loss: 0.0098 - acc: 0.9975 - val_loss: 1.3602 - val_acc: 0.7291\n",
       "Epoch 24/40\n",
-      " - 0s - loss: 0.0045 - acc: 0.9974 - val_loss: 4.0779 - val_acc: 0.5979\n",
+      " - 0s - loss: 0.0068 - acc: 0.9975 - val_loss: 1.3784 - val_acc: 0.7241\n",
       "Epoch 25/40\n",
-      " - 0s - loss: 0.0037 - acc: 0.9983 - val_loss: 4.1042 - val_acc: 0.5911\n",
+      " - 0s - loss: 0.0193 - acc: 0.9963 - val_loss: 1.5348 - val_acc: 0.6650\n",
       "Epoch 26/40\n",
-      " - 0s - loss: 0.0040 - acc: 0.9974 - val_loss: 4.1655 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0107 - acc: 0.9975 - val_loss: 1.4090 - val_acc: 0.7192\n",
       "Epoch 27/40\n",
-      " - 0s - loss: 0.0044 - acc: 0.9974 - val_loss: 4.1673 - val_acc: 0.5876\n",
+      " - 0s - loss: 0.0060 - acc: 0.9988 - val_loss: 1.4929 - val_acc: 0.7192\n",
       "Epoch 28/40\n",
-      " - 0s - loss: 0.0030 - acc: 0.9974 - val_loss: 4.2020 - val_acc: 0.5911\n",
+      " - 0s - loss: 0.0100 - acc: 0.9963 - val_loss: 1.5348 - val_acc: 0.7044\n",
       "Epoch 29/40\n",
-      " - 0s - loss: 0.0089 - acc: 0.9957 - val_loss: 4.1935 - val_acc: 0.6014\n",
+      " - 0s - loss: 0.0128 - acc: 0.9975 - val_loss: 1.6098 - val_acc: 0.7241\n",
       "Epoch 30/40\n",
-      " - 0s - loss: 0.0052 - acc: 0.9974 - val_loss: 4.1401 - val_acc: 0.6048\n",
+      " - 0s - loss: 0.0111 - acc: 0.9963 - val_loss: 1.5620 - val_acc: 0.7389\n",
       "Epoch 31/40\n",
-      " - 0s - loss: 0.0035 - acc: 0.9974 - val_loss: 4.2287 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0066 - acc: 0.9975 - val_loss: 1.6136 - val_acc: 0.7340\n",
       "Epoch 32/40\n",
-      " - 0s - loss: 0.0053 - acc: 0.9974 - val_loss: 4.2445 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0082 - acc: 0.9963 - val_loss: 1.6136 - val_acc: 0.7192\n",
       "Epoch 33/40\n",
-      " - 0s - loss: 0.0037 - acc: 0.9983 - val_loss: 4.2284 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0051 - acc: 0.9988 - val_loss: 1.6465 - val_acc: 0.7094\n",
       "Epoch 34/40\n",
-      " - 0s - loss: 0.0043 - acc: 0.9974 - val_loss: 4.1856 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0060 - acc: 0.9988 - val_loss: 2.0164 - val_acc: 0.6700\n",
       "Epoch 35/40\n",
-      " - 0s - loss: 0.0027 - acc: 0.9974 - val_loss: 4.2044 - val_acc: 0.5945\n",
+      " - 0s - loss: 0.0202 - acc: 0.9963 - val_loss: 1.5099 - val_acc: 0.7094\n",
       "Epoch 36/40\n",
-      " - 0s - loss: 0.0067 - acc: 0.9974 - val_loss: 4.2860 - val_acc: 0.5773\n",
+      " - 0s - loss: 0.0090 - acc: 0.9988 - val_loss: 1.4956 - val_acc: 0.7241\n",
       "Epoch 37/40\n",
-      " - 0s - loss: 0.0055 - acc: 0.9957 - val_loss: 4.7553 - val_acc: 0.5395\n",
+      " - 0s - loss: 0.0086 - acc: 0.9988 - val_loss: 1.6876 - val_acc: 0.6946\n",
       "Epoch 38/40\n",
-      " - 0s - loss: 0.0057 - acc: 0.9957 - val_loss: 4.7055 - val_acc: 0.5498\n",
+      " - 0s - loss: 0.0228 - acc: 0.9938 - val_loss: 1.3686 - val_acc: 0.7192\n",
       "Epoch 39/40\n",
-      " - 0s - loss: 0.0037 - acc: 0.9991 - val_loss: 4.7313 - val_acc: 0.5567\n",
+      " - 0s - loss: 0.0106 - acc: 0.9975 - val_loss: 1.3893 - val_acc: 0.7291\n",
       "Epoch 40/40\n",
-      " - 0s - loss: 0.0031 - acc: 0.9974 - val_loss: 4.5844 - val_acc: 0.5704\n"
+      " - 0s - loss: 0.0063 - acc: 0.9975 - val_loss: 1.4785 - val_acc: 0.7241\n"
      ]
     }
    ],
    "source": [
     "model_MLP.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "train_history_MLP = model_MLP.fit(sequence_padded, label_ohe,batch_size=30, epochs=40,verbose=2, validation_split=0.2)"
+    "train_history_MLP = model_MLP.fit(X_train, y_train,batch_size=30, epochs=40,verbose=2, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "436/436 [==============================] - 0s 48us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.5536030651232517, 0.6766055051339875]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_MLP.evaluate(X_test, y_test)"
    ]
   },
   {
